# optee_examples

./: Makefile
communicator/: Android.mk  CMakeLists.txt
communicator/host/: Makefile  main.c
communicator/host/lib/: CMakeLists.txt
communicator/ta/: Android.mk  Makefile  communicator.c  sub.mk  user_ta_header_defines.h
communicator/ta/include/: communicator.h
console-split/: CMakeLists.txt  Makefile  console-split.c
hello_world/ta/: hello_world_ta.c
normal-controller/: CMakeLists.txt  Makefile
normal-ssp-driver/: CMakeLists.txt  Makefile  normal-controller.old.c
split-driver-controller/: CMakeLists.txt  Makefile  controller.c  controller.h
testpta/: Android.mk  CMakeLists.txt
testpta/host/: Makefile  main.c  optee_example_testpta
